fix white space

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -46,6 +46,7 @@ html {
 .prop-dummy-value {
     position: absolute;
     visibility: hidden;
+    white-space: pre-wrap;
 }
 
 .input-container {
